--- a/Appunti di Elementi di Teoria Degli Insiemi.tex
+++ b/Appunti di Elementi di Teoria Degli Insiemi.tex
@@ -491,8 +491,10 @@ più volte questo linguaggio mediante abbreviazioni, che semplicemente rimpiazza
 la potenza espressiva del linguaggio. Vediamo le prime abbreviazioni:
 \[ x \ne y \Mydef \neg x = y \qquad x \not\in y \Mydef \neg x \in y \qquad \not\exists \Phi\footnote{DA COMPLETARE}
 	\] 
-\textbf{\underline{Nota}}: Il fatto che possiamo dire $C = A \cup B$ o $C = A \cap B$ non significa né che questi oggetti esistano né che siano unici. Dimostreremo fra poco l'esistenza e unicità 
-di unione e intersezione.
+\begin{note}
+	Il fatto che possiamo dire $C = A \cup B$ o $C = A \cap B$ non significa né che questi oggetti esistano né che siano unici. Dimostreremo fra poco l'esistenza e unicità 
+	di unione e intersezione.
+\end{note}
 
 \begin{exercise}
 Esprimi queste proposizioni mediante formule insiemistiche pure:
