--- a/Appunti di Elementi di Teoria Degli Insiemi.tex
+++ b/Appunti di Elementi di Teoria Degli Insiemi.tex
@@ -611,7 +611,7 @@ C'è un unico insieme vuoto.
 Consideriamo due insiemi vuoti $x_1$ e $x_2$, ossia supponiamo $\forall y \, y \not\in x_1$, e $\forall y \, y \not \in x_2$. Allora:
 \[ \forall y \, y \in x_1 \leftrightarrow y \in x_2
 	\]
-perché $y \in x_1$ e $y \in x_2$ sono entrambe necessariamente false. Quindi, per \hyperref[estensionalità]{estensionalità}, $x_1 = x_2$.
+perché $y \in x_1$ e $y \in x_2$ sono entrambe necessariamente false (dunque è sempre contemporaneamente vera la loro negazione). Quindi, per \hyperref[estensionalità]{estensionalità}, $x_1 = x_2$.
 \end{proof}
 
 \subsection{Assiomi dell'insieme vuoto e di estensionalità}
