--- a/Appunti di Elementi di Teoria Degli Insiemi.tex
+++ b/Appunti di Elementi di Teoria Degli Insiemi.tex
@@ -49,7 +49,9 @@
 
 \section*{Premessa}
 Queste dispense sono la quasi esatta trascrizione in \LaTeX\,delle dispense del corso di Elementi di teoria degli insiemi, tenuto dal prof. Marcello Mamino nell'anno accademico 2022-23.
+
 \section*{Ringraziamenti}
+Francesco Sorce.
 
 \mbox{}
 \vfill
@@ -231,7 +233,7 @@ $\QQ$ è numerabile.
 
 \begin{proof}
 $\QQ$ è in corrispondenza biunivoca con:
-\[F = \{(\text{num.},\text{den.}) | \text{num. $\in \ZZ$} \wedge \text{den. $\in\NN_{>0}$} \wedge \text{M.C.D.(num.,den.) = 1}\} \subseteq \ZZ \times \NN\]
+\[F = \{(\text{num.},\text{den.})\footnote{num. = numeratore, den. = denominatore.} | \text{num. $\in \ZZ$} \wedge \text{den. $\in\NN_{>0}$} \wedge \text{M.C.D.(num.,den.) = 1}\} \subseteq \ZZ \times \NN\]
 \end{proof}
 
 \begin{notexample}
@@ -253,7 +255,7 @@ graficamente:
 \end{center}
 
 Si vede facilmente (esercizio!) che la successione $\{a_{i_{2k}}\}_k$ è crescente, $\{a_{i_{2k+1}}\}_k$ è decrescente 
-e $\displaystyle \lim_{k \to +\infty} a_{i_{2k}} \leq \lim_{k \to +\infty a_{i_{2k+1}}}$. Fissiamo $x$ tale che $\displaystyle \lim_{k \to +\infty} a_{i_{2k}} \leq x \leq \lim_{k \to +\infty} a_{i_{2k+1}}$.
+e $\displaystyle \lim_{k \to +\infty} a_{i_{2k}} \leq \lim_{k \to +\infty}a_{i_{2k+1}}$. Fissiamo $x$ tale che $\displaystyle \lim_{k \to +\infty} a_{i_{2k}} \leq x \leq \lim_{k \to +\infty} a_{i_{2k+1}}$.
 Chiaramente $x$ non è nessuno degli $a_{i_j}$, perché $a_{i_2k} < x < a_{i_{2k+1}}$. Supponiamo $x = a_n$, allora ci sarà $j$ tale che $i_j < n < i_{j+1}$, ma 
 questo è assurdo perché allora $x = a_n$ è compreso fra $a_{i_{j-1}}$ e $a_{i_j}$, però $n < i_{j+1}$ contro la minimalità di quest'ultimo.
 
@@ -287,6 +289,8 @@ Dato $X \subseteq \RR$, il \vocab{derivato di Cantor-Bendixson} di $X$ è:
 \begin{remark}
 Se $X$ è chiuso e per $X^{\prime}$ vale il \hyperref[unicità]{Fatto 1.5}, allora anche per $X$ vale il \hyperref[unicità]{Fatto 1.5}.
 \end{remark}
+
+Dimostriamo questo fatto.
 
 \begin{proof}
 Occorre dimostrare che se $f$ è continua, lineare, ristretta agli intervalli aperti che non intersecano $X$, e non ha punti angolosi, allora $f$ è
@@ -376,7 +380,7 @@ Ok, questo corollario copre $X_\omega$, $X_{\omega + 1}$, $X_{\omega + 2}$, ma c
 No: occorre un nuovo corollario.
 
 \begin{corollary}
-Se $X^{(n)}$ è di ``tipo $X_{\omega - 2}$", allora per $X$ vale il \hyperref[unicità]{Fatto 1.5}.
+Se $X^{(n)}$ è di ``tipo $X_{\omega \cdot 2}$", allora per $X$ vale il \hyperref[unicità]{Fatto 1.5}.
 \end{corollary}
 
 E poi un altro per $X_{\omega \cdot 3}$, e un altro per $X_{\omega \cdot 4}$, etc.\\
@@ -396,10 +400,10 @@ Dimostrare il teorema di \hyperref[CL]{Cantor-Lebesgue}.
 Descrivere un oggetto matematico non basta per crearlo. Se bastasse, si incorrerebbe in contraddizioni come queste.
 \paragraph*{Paradosso di Russell}\mbox{}\\
 Tipicamente le collezioni - uso questa parola perché daremo, al termine ``insieme", un senso tecnico preciso - non sono membro di se stesse: la collezione di 
-tutti i numeri primi non è un numero primo. Però ci sono anche collezioni che sono membra di se stesse: per esempio la collezione di tutte le collezioni. Consideriamo:
+tutti i numeri primi non è un numero primo. Però ci sono anche collezioni che sono membri di se stessi: per esempio la collezione di tutte le collezioni. Consideriamo:
 \[ N = \{\text{collezioni $X$}\, | X \not\in X \}
 	\]
-la collezione delle collezioni che non sono membra di se stesse - $N$ per collezioni normali. Quindi ci chiediamo se $N \in N$ oppure no? $N \in N$ se e solo se per definizione $N \not \in N$, che è assurdo.\\
+la collezione delle collezioni che non sono membri di se stessi - la $N$ sta per collezioni normali. Quindi ci chiediamo se $N \in N$ oppure no? $N \in N$ se e solo se per definizione $N \not \in N$, che è assurdo.\\
 Il paradosso di Russell ci dice che, del principio di collezione - ossia l'idea che data una proprietà ben definita $P$ si possa costruire la collezione $\{X | P(X)\}$ - non ci si può fidare.
 
 \paragraph*{Paradosso di Berry}\mbox{}\\
@@ -486,11 +490,18 @@ o $\Phi_1 \land (\Phi_2 \lor \Phi_3)$. In una notazione completamente parentesiz
 \[ \neg(\exists x((x \in a)\land(\neg(x \in b))))
 	\]
 Non useremo, in generale, questa notazione, ma useremo le parentesi selettivamente per evitare ambiguità.\\
-\textbf{\underline{Aberrazioni}} Le formule appena descritte costituiscono il linguaggio della teoria degli insiemi \textbf{puro}. Durante il corso estenderemo
+\textbf{\underline{Abbreviazioni}} Le formule appena descritte costituiscono il linguaggio della teoria degli insiemi \textbf{puro}. Durante il corso estenderemo
 più volte questo linguaggio mediante abbreviazioni, che semplicemente rimpiazzano formule più lunghe con scritture convenzionali più compatte, e quindi non alterano 
 la potenza espressiva del linguaggio. Vediamo le prime abbreviazioni:
-\[ x \ne y \Mydef \neg x = y \qquad x \not\in y \Mydef \neg x \in y \qquad \not\exists \Phi\footnote{DA COMPLETARE}
-	\] 
+\[ x \ne y \Mydef \neg x = y \footnote{Cioè ``non è vero che $x$ è uguale a $y$''.} \qquad x \not\in y \Mydef \neg x \in y \qquad \not\exists x \,\Phi \Mydef \neg \exists x \, \Phi
+	\]\[ \Phi \rightarrow \psi \Mydef \psi \lor \neg \Phi \qquad \Phi \leftrightarrow \psi \Mydef (\Phi \rightarrow \psi) \land (\psi \rightarrow \Phi)
+		\]\[ \exists x \in y \; \Phi \Mydef \exists x (x \in A \land \Phi) \qquad \forall x \in A \; \Phi \Mydef \forall x (x \in A \rightarrow \Phi)
+			\]\[ \exists !\, x\, \Phi(x) \Mydef \exists x (\Phi(x) \land \forall y(\Phi(y) \rightarrow y = a))
+				\]\[ \exists !\, x \in A \,\Phi(x) \Mydef \exists! \, x(x \in A \land \Phi(x))
+					\]\[ A \subseteq B \Mydef \forall x (x \in A \rightarrow x \in B) \qquad A \subsetneq B \Mydef( A \subseteq B) \land (A \ne B)
+						\]\[ C = A \cup B \Mydef \forall x \, x \in C \leftrightarrow (x \in A \lor x \in B)
+							\]\[ C = A \cap B \Mydef \forall x \, x \in C \leftrightarrow (x \in A \land x \in B)
+								\]
 \begin{note}
 	Il fatto che possiamo dire $C = A \cup B$ o $C = A \cap B$ non significa né che questi oggetti esistano né che siano unici. Dimostreremo fra poco l'esistenza e unicità 
 	di unione e intersezione.
@@ -501,7 +512,7 @@ Esprimi queste proposizioni mediante formule insiemistiche pure:
 \begin{itemize}
 	\item gli elementi degli elementi di $A$ sono elementi di $A$;
 	\item $B$ è l'insieme dei sottoinsiemi di $A$;
-	\item l'unione degli elementi di $A$ è l'intersezione di quelli di $B$\footnote{Qui assumi che l'unione e intersezione.}
+	\item l'unione degli elementi di $A$ è l'intersezione di quelli di $B$\footnote{Qui assumi che l'unione e intersezione esistano e siano uniche.}
 \end{itemize}
 \end{exercise}
 
@@ -575,6 +586,7 @@ Per quanto ci riguarda, \textbf{se $x = y$ allora $x$ e $y$ sono nomi della stes
 \subsection{Assiomi dell'insieme vuoto e di estensionalità}
 \begin{axiom}
 [Assioma dell'insieme vuoto]
+\label{ax1}
 Esiste un insieme vuoto.
 \[ \exists x \; \forall y \; y \not\in x
 		\]
@@ -587,22 +599,22 @@ Tuttavia è bello poter partire avendo per le mani almeno un insieme.
 
 \begin{axiom}
 [Assioma di estensionalità]
-\label{estensionalità}
+\label{ax2}
 Un insieme è determinato dalla collezione dei suoi elementi. Due insiemi coincidono se e solo se hanno i medesimi elementi.
-\[ \forall a \; \forall b \; a = b \leftrightarrow \forall x (x \in a \longleftrightarrow x \in b)
+\[ \forall a \; \forall b \; a = b \leftrightarrow \forall x (x \in a \leftrightarrow x \in b)
 	\]
 \end{axiom}
 
 \begin{exercise}
-Dimostra che la freccia $a = b \rightarrow \forall x (x \in a \longleftrightarrow x \in b)$, in realtà, segue dal fatto che se $a = b$ allora $a$ e $b$ sono indistinguibili.
+Dimostra che la freccia $a = b \rightarrow \forall x (x \in a \leftrightarrow x \in b)$, in realtà, segue dal fatto che se $a = b$ allora $a$ e $b$ sono indistinguibili\footnote{Nel senso che abbiamo descritto in precedenza, cioè sono nomi della stessa cosa.}.
 \end{exercise}
 
 \textbf{\underline{Convenzione}} Le variabili libere (= non quantificate), se non specificato altrimenti, si intendono quantificate universalmente all'inizio della formula. Per cui possiamo scrivere
 l'assioma di estensionalità semplicemente nella forma:
-\[ a = b \leftrightarrow \forall x (x \in A \leftrightarrow x \in b)
+\[ a = b \leftrightarrow \forall x (x \in a \leftrightarrow x \in b)
 	\]
 
-\begin{proposition}
+\begin{proposition}[Unicità dell'insieme vuoto]
 C'è un unico insieme vuoto.
 \[ \exists ! \; x \; \forall y \; y \not \in x
 	\]
@@ -610,20 +622,399 @@ C'è un unico insieme vuoto.
 
 \begin{proof}
 Consideriamo due insiemi vuoti $x_1$ e $x_2$, ossia supponiamo $\forall y \, y \not\in x_1$, e $\forall y \, y \not \in x_2$. Allora:
-\[ \forall y \, y \in x_1 \leftrightarrow y \in x_2
+\[ \forall y (y \in x_1 \leftrightarrow y \in x_2)
 	\]
-[sono coimplicate logicamente] perché $y \in x_1$ e $y \in x_2$ sono entrambe necessariamente false. Quindi, per \hyperref[estensionalità]{estensionalità}, $x_1 = x_2$.
+[sono coimplicate logicamente] perché $y \in x_1$ e $y \in x_2$ sono entrambe necessariamente false. Quindi, per \hyperref[ax2]{estensionalità}, la proposizione sopra è equivalente a $x_1 = x_2$.\\
+\emph{Dimostrazione formale.} Questo livello di pedanteria non è necessario, ma, per una volta, proviamo a dimostrare in ogni dettaglio la formula $\exists ! \, \forall y \, y \not\in x$. Per definizione di $\exists !$, ciò equivale a:
+\[ \exists x_1 ((\forall y \, y \not \in x_1) \land \forall x_2 ((\forall y \, y \not \in x_2) \rightarrow x_2 = x_1))
+	\]
+Per l'\hyperref[ax1]{assioma del vuoto}, $\exists x_1 \, \forall y \, y \not \in x_1$: fissiamo questo $x_1$. Resta da dimostrare che:
+\[ (\forall y \, y \not \in x_1) \land \forall x_2(\forall y \, y \not \in x_2) \rightarrow x_2 = x_1
+	\]
+Per costruzione, $\forall y \, y \not\in x_1$, è vera (avendo fissato $x_1$), quindi resta:
+\[ \forall x_2 (\forall y \, y \not \in x_2) \rightarrow x_2 = x_1
+	\]
+Ora prendiamo un $x_2$ qualunque, dobbiamo dimostrare:
+\[ \forall y (y \not \in x_2) \rightarrow x_2 = x_1
+	\]
+Si danno due casi: o $\forall y (y \not \in x_2)$ è vera o è falsa. Nel secondo caso, l'implicazione è vera per via della tabella di verità. Nel primo abbiamo sia $\forall y \, y \not \in x_1$, [vera] per
+costruzione, sia $\forall y \, y \not \in x_2$, [vera] per ipotesi. Quindi, preso un qualunque $y$, $y \in x_1$ e $y \in x_2$ sono entrambe false. La tabella di verità di $\leftrightarrow$ ci dice quindi che vale $y \in x_1 \leftrightarrow y \in x_2$, e, per 
+l'arbitrarietà di $y$:
+\[ \forall y (y \in x_1 \leftrightarrow y \in x_2)
+	\]
+Dall'\hyperref[ax2]{assioma di estensionalità}:
+\[ \forall y (y \in x_1 \leftrightarrow y \in x_2) \rightarrow x_1 = x_2
+	\]
+Abbiamo quindi $x_1 = x_2$, da cui segue la verità dell'implicazione iniziale.
 \end{proof}
 
+Chiaramente, ho voluto scrivere questa dimostrazione delirante per convincervi che NON È UNA BUONA IDEA.
 
-\newpage
+\begin{notation}
+L'unicità dell'insieme vuoto ci giustifica ad introdurre una nuova abbreviazione:
+\[ x = \emptyset \Mydef \forall y \, y \not\in x \qquad \emptyset \in x \Mydef \exists z (z = \emptyset \land z \in x)
+	\]
+\end{notation}
+
 \subsection{Assioma di separazione}
-\newpage
+\begin{axiom}
+[Assioma di separazione]
+\label{ax3}
+Se $A$ è un insieme, e $\psi(x)$ una formula insiemistica qualunque, allora $\{x \in A | \psi (x)\}$\footnote{Stiamo usando già questa notazione, ma la definiremo a breve.} è un insieme.
+\[ \forall A \; \exists B \; \forall x \; x \in B \leftrightarrow (x \in A \land \psi (x))
+	\]
+\end{axiom}
+
+\begin{note}
+Tecnicamente l'assioma di separazione è uno \vocab{schema di assiomi}, ossia una regola che, per ogni possibile formula $\psi$, ci permette di scrivere un assioma.
+\end{note}
+
+\begin{proposition}
+Fissati $A$ e $\psi(x)$, l'insieme $\{x \in A | \psi(x)\}$ è univocamente definito. Ossia:
+\[ \forall A \; \exists \textcolor{red}{!} B \; \forall x \; x \in B \leftrightarrow (x \in A \land \psi(x))
+	\]
+\end{proposition}
+
+\begin{proof}
+Come per l'unicità dell'insieme vuoto, supponiamo di avere $B_1$ e $B_2$ tali che:
+\[ \forall x \, x \in B_1 \leftrightarrow (x \in A \land \psi(x)) \qquad \forall x \, x \in B_2 \leftrightarrow (x \in A \land \psi(x))
+	\]
+Allora, $\forall x \, x \in B_1 \leftrightarrow (x \in A \land \psi(x)) \leftrightarrow x \in B_2$, quindi, \hyperref[ax2]{estensionalità}, $B_1 = B_2$.
+\end{proof}
+
+\begin{exercise}
+Verifica che se $\psi \leftrightarrow \Phi$ e $\Phi \leftrightarrow \Theta$, allora $\psi \leftrightarrow \Theta$.
+\end{exercise}
+
+\begin{notation}
+Vista l'unicità, scriviamo:
+\[ B = \{x \in A | \psi(x)\} \Mydef \forall x \, x \in B \leftrightarrow (x \in A \land \psi(x))
+	\]
+\end{notation}
+
+Osserviamo che l'assioma di separazione è una forma indebolita del principio di collezione. Rimpiazzando questo con quello, il Paradosso di Russell diventa una proposizione.
+
+\begin{proposition}[Insieme di tutti gli inisemi]
+Non esiste l'insieme di tutti gli insiemi.
+\[ \not\exists V \; \forall x \; x \in V
+	\]
+\end{proposition}
+
+\begin{proof}
+Supponiamo, per assurdo, che esista questo $V$. Allora, per \hyperref[ax3]{separazione} con la formula $\psi (x) \equiv x \not \in x$, esiste:
+\[ N = \{x \in V | x \not\in x\}
+	\]
+che ha, per definizione, la proprietà:
+\[ \forall x \, x \in N \leftrightarrow (x \in V \land x \not \in x)
+	\]
+Per ipotesi assurda, $x \in V$ è sempre vera (stiamo considerando l'insieme di tutti gli insiemi), quindi quanto scritto si riduce a:
+\[ \forall x \, x \in N \leftrightarrow x \not\in x
+	\]
+prendendo ora, $x = N$, abbiamo $N \in N \leftrightarrow N \not\in N$, assurdo.
+\end{proof}
+
 \subsection{Classi e classi proprie}
-\newpage
+Sebbene, abbiamo detto che gli unici oggetti della teoria degli insiemi sono gli insiemi, usualmente ci si riferisce alla collezione di tutti gli insiemi 
+che soddisfano una certa formula come ad una specie di insieme: una \vocab{classe}. Più precisamente, data una formula $\psi(x)$, se diciamo: ``sia $C$ la classe degli insiemi $x$ tali che $\psi(x)$''
+intendiamo dire che useremo la scrittura $x \in C$ come una semplice abbreviazione per la formula $\psi(x)$. \\
+Non avrebbe senso scrivere \textcolor{red}{$C \in$ qualcosa}, perché il simbolo $\in$ in $x \in C$ non ha senso, se non nel tutt'uno $\in C$. In altri termini, se scriviamo $x \in C$ in luogo di $\psi(x)$ è solo come ausilio dell'intuizione:
+avremmo potuto decidere di scrivere $x$\ding{168}, o nient'altro che $\psi(x)$.
+
+\begin{definition}
+La classe $V$ si dice \vocab{classe universale} ed è la classe di tutti gli insiemi.
+\[ x \in V \Mydef x = x
+	\]
+\end{definition}
+
+Insomma, scrivere $x \in V$ non dice molto: è una formula sempre vera.
+\pagebreak
+\begin{notation}
+Date due classi $C$ e $D$, che, ricordiamo, non significa altro che ``date due formule$\ldots$'', definiamo l'abbreviazione:
+$$ C = D \Mydef \forall x ((x \in C) \leftrightarrow (x \in D)) $$
+\end{notation}
+
+Ora, dato un qualunque insieme $A$, possiamo definire la classe $\hat{A}$ degli $x$ tali che $x \in A$. Se $\hat{A} = \hat{B}$, per definizione:
+\[ \forall x ((x \in A) \leftrightarrow (x \in B))
+	\]
+quindi $A = B$ per estensionalità. Ha quindi senso, con un leggero abuso di notazione, omettere il cappelletto $\hat{}$ e identificare la classe $\hat{A}$ semplicemente con $A$. In questo senso,
+abbiamo classi che sono insiemi - formalmente $C$ è un insieme se $C = \hat{A}$ per qualche insieme $A$ - e classi che non sono insiemi. Chiamiamo \vocab{classe propria} una classe che non è un insieme.
+
+\begin{example}
+$V$ è una classe propria.
+\end{example}
+
+\textbf{\underline{L'intuizione}}, che sarà più chiara via via che procediamo nel corso, è che le classi proprie sono troppo grandi per essere insiemi.
+
 \subsection{Assioma del paio e coppia di Kuratowski}
-\newpage
+I primi assiomi ci dicono, a grandi linee, che, entro i limiti di quanto si può fare rinunciando al principio di collezione - che esiste $\{x | \, \text{una qualunque proprietà}\}$ -, gli insiemi sono delle specie di collezioni.
+Sono determinati dai loro elementi, e li si può dividere in collezioni più piccole in maniera arbitraria. Ci troviamo, però, adesso, nella necessità di procurarci qualche insieme con cui lavorare. I prossimi assiomi serviranno per giustificare le costruzioni con cui,
+usualmente, si definiscono nuovi insiemi. Per esempio, abbiamo bisogno di costruire certi insiemi di base, tipo l'insieme dei numeri interi o insiemi finiti i cui elementi sono elencati esplicitamente, fare prodotti di insiemi esistenti, 
+considerare le funzioni fra insiemi esistenti, etc.
+
+\begin{axiom}
+[Assioma del paio]
+\label{ax4}
+Dati $a$ e $b$ esiste l'insieme $\{a,b\}$.
+\[ \forall a \; \forall b \; \exists P \; \forall x \; x \in P \leftrightarrow (x = a \lor x = b)
+	\]
+\end{axiom}
+
+\begin{proposition}
+[Unicità del paio]
+Fissati $a$ e $b$, l'insieme $\{a,b\}$ è univocamente determinato.
+\[\forall a \; \forall b \; \exists\textcolor{red}{!} P \; \forall x \; x \in P \leftrightarrow (x = a \lor x = b)
+	\]
+\end{proposition}
+
+\begin{exercise}
+	Dimostra la proposizione precedente.
+\end{exercise}
+
+\begin{soln}
+	Supponiamo che esistano $P_1$ e $P_2$ tali che:
+	\[ \forall x (x \in P_1 \leftrightarrow (x = a \lor x = b)) \qquad \text e \qquad \forall x (x \in P_2 \leftrightarrow (x = a \lor x = b))
+		\]
+	da ciò segue che:
+	\[ \forall x (x \in P_1 \leftrightarrow x \in P_2)
+		\]
+	dunque per \hyperref[ax2]{estensionalità} $P_1 = P_2$\footnote{Volendo essere pignoli andrebbe specificato $\forall P_1 \, \forall P_2$.}.
+\end{soln}
+
+\begin{proposition}[Esistenza dei singoletti]
+	Dato $a$, esiste ed è unico $\{a\}$.
+	\[ \forall a \; \exists ! S \; \forall x \; x \in S \leftrightarrow x = a
+		\]
+\end{proposition}
+
+\begin{proof}
+	Ponendo $b = a$ nella proposizione precedente, si ha che:
+	\[ \forall a \; \exists ! S \; \forall x \; x \in S \leftrightarrow (x = a \lor x= a)
+		\]
+	ora $x = a \lor x = a$ equivale a $x = a$.
+\end{proof}
+
+\begin{notation}
+	Possiamo ora porre:
+	\[ P = \{a,b\} \Mydef \forall x \, x \in P \leftrightarrow (x = a \lor x = b)
+		\]\[ S = \{a\} \Mydef \forall x \, x \in S \leftrightarrow x = a
+			\]
+\end{notation}
+
+\begin{remark}
+	Osserviamo che $\{a,b\} = \{b,a\}$.
+\end{remark}
+
+\begin{proof}
+	Usiamo il fatto che $\lor$ è commutativo:
+	\[ x \in \{a,b\} \leftrightarrow (x = a \lor x = b) \leftrightarrow (x = b \lor x = a) \leftrightarrow x \in \{b,a\}
+		\]
+	quindi per \hyperref[ax2]{estensionalità} $\{a,b\} = \{b,a\}$.
+\end{proof}
+
+Il paio $\{a,b\}$ è, quindi, una coppia non ordinata. È possibile codificare le coppie ordinate con questo trucco.
+
+\begin{definition}
+	[Coppia di \href{https://it.wikipedia.org/wiki/Kazimierz_Kuratowski}{\textcolor{purple}{Kuratowski}}]
+	Si dice \vocab{coppia di Kuratowski}:
+	\[(a,b) \Mydef \{a,\{a,b\}\}
+		\]
+\end{definition}
+
+\begin{proposition}
+	La coppia di Kuratowski $(a,b)$ rappresenta la coppia ordinata di $a$ e $b$, ossia:
+	\[ (a,b) = (a^{\prime},b^{\prime}) \leftrightarrow (a = a^{\prime} \land b = b^{\prime})
+		\]
+\end{proposition}
+
+\begin{proof}
+	Dato $c = (a,b)$, vogliamo determinare univocamente $a$ e $b$. Intanto, $a$ è determinato da:
+	\[ x = a \leftrightarrow \forall y \in c \,(x \in c)
+		\]
+	la freccia $\rightarrow$ è immediata [per come è definita $(a,b)$]\footnote{Se $x$ è $a$, allora,
+	poiché qualsiasi elemento che appartenga alla coppia o è $\{a\}$ o contiene $a$, $x$ deve appartenere a quest'ultimo.},
+	mentre $\leftarrow$ segue da $\{a\} \in c$, per cui $\forall y \in c \, (x \in y) \implies x \in \{a\} \implies x = a$.
+	Veniamo ora a $b$. Studiamo prima il caso in cui $\exists ! x \, x \in c$:
+	\[ \exists x \, x \in c \iff \{a\} = \{a,b\}
+		\]
+	in quanto $\{a\} \in c$ e $\{a,b\} \in c$, quindi $\{a\} = \{a,b\} \iff b = a$, per \hyperref[ax2]{estensionalità}. In questo caso, $b$ è quindi determinato.
+	Altrimenti, $x = \{a,b\} \leftrightarrow (x \in c \land x \ne \{a\})$, $\{a,b\}$ è quindi univocamente determinato da $c$, e $x = b \leftrightarrow (x \in \{a,b\} \land x \ne a)$.
+\end{proof}
+
+\begin{definition}
+	Possiamo definire quindi:
+	\[ (a,b,c) \Mydef ((a,b),c)
+		\]\[ (a,b,c,d) \Mydef (((a,b),c),d)
+			\]\[ (a_1,a_2,\ldots,a_n) \Mydef ((a_1,a_2,\ldots,a_{n-1}),a_n)
+				\]
+\end{definition}
+
+\begin{note}
+	Quest'ultima definizione è, in realtà, uno schema di definizioni: una per ogni $n$. Per ora, \textcolor{red}{NON} siamo in grado di scrivere, per esempio,
+	una formula insiemistica che dica ``Esiste un $n$ ed una $n$-upla $(a_1,\ldots,a_n)$ tale che…''. Però, per ogni $n$ dato, chessò 92, possiamo scrivere esplicitamente una formula che dice $x = (a_1,a_2,a_3,\ldots,a_{92})$.
+\end{note}
+
+\begin{proposition}
+	Si ha che:
+	\[ (a,b,c) = (a',b',c') \leftrightarrow a = a' \land b = b' \land c = c'
+		\]\[ (a_1,\ldots,a_n) = (a_1',\ldots,a_n') \leftrightarrow a_1 = a_1' \land \ldots \land a_n = a_n'
+			\]
+\end{proposition}
+
+\begin{exercise}
+	Dimostra la prima e convinciti che, dato un qualunque $n$ esplicito, potresti dimostrare la seconda.
+\end{exercise}
+
 \subsection{Assioma dell'unione e operazioni booleane}
+
+\begin{axiom}[Assioma dell'unione]
+	Dato un insieme $A$ esiste un insieme $B$ i cui elementi sono gli elementi degli elementi di $A$. Ovvero, dato un insieme $A$ esiste l'unione degli elementi di $A$.
+	\[ \forall A \; \exists B \; \forall x \; x \in B \leftrightarrow \exists y \in A \; x \in y\footnote{Cioè $x$ è un elemento di $B$ se e solo se è un elemento di un elemento di $A$.}
+		\]
+\end{axiom}
+
+\begin{proposition}
+	[Unicità dell'unione]
+	Vale l'unicità dell'unione:
+	\[ \forall A \; \exists ! B \; \forall x \; x \in B \leftrightarrow \exists y \in A \; x \in y
+		\]
+\end{proposition}
+
+\begin{proof}
+	Supponiamo di avere $B_1$ e $B_2$ tali che:
+	\[ \forall x \, x \in B_1 \leftrightarrow \exists y \in A \, x \in y
+		\]\[ \forall x \, x \in B_2 \leftrightarrow \exists y \in A \, x \in y
+			\]
+	quindi $\forall x (x \in B_1 \leftrightarrow x \in B_2)$, e per \hyperref[ax2]{estensionalità} $B_1 = B_2$.
+\end{proof}
+
+\begin{notation}
+	Possiamo introdurre l'abbreviazione:
+	\[ B = \bigcup A\footnote{``Unione di $A$''.} \Mydef \forall x \,( x \in B \leftrightarrow \exists y \, x \in y)
+		\]
+\end{notation}
+
+\begin{exercise}
+	Dimostra che dall'assioma dell'unione segue che:
+	\[ \forall A \; \exists B \; (\forall y \in A \; \forall x \in y \; x \in B)\footnote{Cioè per ogni insieme esiste l'insieme di tutti gli elementi degli elementi di $A$.}
+		\]
+\end{exercise}
+
+Combinando l'assioma dell'unione e del paio possiamo definire $a \cup b$.
+
+\begin{definition}
+	Poniamo:
+	\[ a \cup b \Mydef \bigcup\{a,b\}
+		\]
+\end{definition}
+
+\begin{proposition}
+	Vale che:
+	\[ x \in a \cup b \leftrightarrow (x \in a \lor x \in b)
+		\]
+\end{proposition}
+
+\begin{proof}
+	Dire che $x$ è un elemento di $a \cup b$ significa dire che $x$ è un elemento di un elemento di $\{a,b\}$, ossia
+	che $x$ è un elemento di uno fra $a$ e $b$ [il viceversa è ovvio per la definizione che abbiamo dato di unione].
+\end{proof}
+
+Ora definiamo le intersezioni: riesci a vedere perché, a differenza delle unioni, non servirà un nuovo assioma?
+
+\begin{definition}
+	Sia $C$ una \textcolor{red}{classe}\footnote{Quindi, in particolare, $C$ può essere un insieme.} non vuota.
+	L'\textcolor{red}{insieme} $B$ è l'\vocab{intersezione} di $C$ se:
+	\[ B = \bigcap C \Mydef \forall x \; x \in B \leftrightarrow \forall y \in C \; x \in y
+		\]
+\end{definition}
+
+\begin{proposition}
+	Data una classe non vuota $C$, l'intersezione $\bigcap C$ esiste ed è unica. In particolare, nel caso dell'intersezione di un insieme vale:
+	\[ \forall A (A \ne \emptyset \rightarrow \exists ! B \; \forall x(x \in B \leftrightarrow \forall y \in A \; x \in y))
+		\]
+\end{proposition}
+
+\begin{note}
+	L'ipotesi $C \ne \emptyset$ è necessaria perché si avrebbe che $\cap \emptyset$ è la classe universale $V$, che non è un insieme.
+\end{note}
+
+\begin{proof}
+	L'unicità segue per \hyperref[ax2]{estensionalità} al solito modo. Veniamo all'esistenza. Dal momento che $C$ non è vuota, possiamo prendere $z \in C$. 
+	Ora consideriamo:
+	\[ B = \{x \in z | \forall y \in C \, x \in y\}
+		\]
+	chiaramente $x \in B \rightarrow \forall y \in C \, x \in y$. D'altro canto, $\forall y \in C \, x \in y$ implica, in particolare, $x \in z$, quindi $x \in B$. Abbiamo 
+	così verificato che $x \in B \leftrightarrow \forall y \in C \, x \in y$, ossia $B = \bigcap C$.
+\end{proof}
+
+\begin{notation}
+	Poniamo:
+	\[ a \cap b \Mydef \bigcap\{a,b\} \qquad \text e \qquad a\setminus b \Mydef \{x \in a | x \not\in b\}
+		\]
+\end{notation}
+
+\begin{proposition}
+	Vale che:
+	\[ x \in a \cap b \leftrightarrow (x \in a \land x \in b)
+		\]\[ x \in a \setminus b \leftrightarrow (x \in a \land x \not\in b)
+			\]
+\end{proposition}
+
+\begin{exercise}
+	Dimostrare la proposizione precedente (la seconda è semplicemente la definizione).
+\end{exercise}
+
+\begin{proposition}
+	Alcune proprietà delle operazioni $\cup$, $\cap$, $\setminus$:
+	\[ \text{\textcolor{red}{commutatività:}} \qquad a \cup b = b \cup a \qquad \text e \qquad a \cap b = b \cap a
+		\] \begin{align*}	\text{\textcolor{red}{associatività:}} \qquad  
+			&a \cup (b \cup c) = (a \cup b) \cup c \Mydef a \cup b \cup c\\
+			&a \cap (b \cap c) = (a \cap b) \cap c \Mydef a \cap b \cap c
+		\end{align*}
+	\begin{align*}	\text{\textcolor{red}{distributività:}} \qquad  
+		&a \cup (b \cap c) = (a \cup b) \cap (a \cup c)\\
+		&a \cap (b \cup c) = (a \cap b) \cup (a \cap c)
+	\end{align*}
+	\begin{align*}	\text{\textcolor{red}{leggi di \href{https://it.wikipedia.org/wiki/Augustus_De_Morgan}{\textcolor{purple}{De Morgan}}:}} \qquad  
+		&a \setminus (b \cup c) = (a \setminus b) \cap (a \setminus c)\\
+		&a \setminus (b \cap c) = (a \setminus b) \cup (a \setminus c)
+	\end{align*}
+\end{proposition}
+
+\begin{proof}
+	Tutte queste proprietà su deducono immediatamente dalle corrispondenti proprietà dei connettivi logici, le quali, a loro volta, si vedono con le tabelle di verità. Per esempio, dimostriamo 
+	la prima delle leggi di De Morgan:
+	\[ \begin{split}
+		x \in a \setminus (b \cup c) & \iff x \in a \land x \not\in (b \cup c)\\
+		& \iff x \in a \land \neg(x \in b \lor x \in c)\\
+		& \iff x \in a \land x \not\in b \land x \not\in c\\
+		& \iff x \in a \land x \not\in b \land x \in a \land x \not\in c\\
+		& \iff x \in a \setminus b \land x \in a \setminus c\\
+		& \iff x \in (a \setminus b) \cap (a \setminus c)
+	\end{split}
+		\]
+\end{proof}
+
+Ora possiamo costruire insiemi finiti elencandone gli elementi, come si fa di solito, con la notazione $\{\ldots\}$.
+
+\begin{notation}
+	Poniamo:
+	\[ \{a,b,c\} \Mydef \{a\} \cup \{b\} \cup \{c\}
+		\]\[ \{a,b,c,d\} \Mydef \{a\} \cup \{b\} \cup \{c\} \cup \{d\}
+			\]\[ \{a_1,\ldots,a_n\} \Mydef \{a_1\} \cup \ldots \cup \{a_n\}
+				\]
+\end{notation}
+
+\begin{proposition}
+	Vale che:
+	\[ x \in \{a,b,c\} \leftrightarrow (x = a \lor x = b \lor x = c)
+		\]\[ x \in \{a_1,\ldots,a_n\} \leftrightarrow (x = a_1 \lor \ldots \lor x = a_n) 
+			\]
+\end{proposition}
+
+\begin{exercise}
+	Dimostrare la proposizione precedente.
+\end{exercise}
+
 \newpage
 \subsection{Assioma delle parti e prodotto cartesiano}
 \newpage
